# odometry_skid_steering

./: README.md
robotics_hw1/: CMakeLists.txt  package.xml
robotics_hw1/cfg/: dynamic_reconfig.cfg
robotics_hw1/launch/: project_launcher.launch
robotics_hw1/msg/: FourSpeeds.msg  Speeds.msg
robotics_hw1/src/: baseline_estimator.cpp  compute_odom.cpp  differential_drive_velocities.cpp  gearbox_estimator.cpp  synchro_baseline_estimator.cpp  synchro_motor.cpp  tf_publisher.cpp
